--- a/simon/.gitignore
+++ b/simon/.gitignore
@@ -1,13 +1,5 @@
-# dependencies
-node_modules
-/.pnp
-.pnp.js
-
-# production
-/build
-
-# misc
 .DS_Store
-
-npm-debug.log*
-.vscode
+node_modules/
+.vscode/
+dbkeys.sh
+cookie.txt
